# django-repository

./: .dockerignore  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml
core/: settings.py
